[metadata]
name = lmod_manager
description = Manage Lmod modulefiles for various AdaCore software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaCore/lmod_manager

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include = lmod_manager

[options.entry_points]
console_scripts =
    lmod_manager = lmod_manager.lmod_manager:main
