[metadata]
name = lmod_manager
description = Manage Lmod modulefiles for various AdaCore software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaCore/lmod_manager

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
devel =
    build >=0.7.0
    setuptools_scm >=6.2

[options.packages.find]
include = lmod_manager

[options.entry_points]
console_scripts =
    lmod_manager = lmod_manager.lmod_manager:main
